fixed colour contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -72,7 +72,7 @@ main {
 .card, .resources {
     flex: 1; /* Ocupan el mismo espacio en el contenedor flex */
     /*display: inline-table;*/
-    background-color: rgb(239, 188, 239); /* Fondo azul claro (opcional) */
+    background-color: rgb(247 216 247); /* Fondo azul claro (opcional) */
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra sutil */
     width: 48%;
